--- a/css/style.css
+++ b/css/style.css
@@ -293,14 +293,45 @@ color: #474D4B;
 
 .teste{
 
-position: relative;
-width: 395px;
-height: 241px;
-background: #FDFDFD;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-border-radius: 15px;
+	position: relative;
+	width: 395px;
+	height: 241px;
+	background: #FDFDFD;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+	border-radius: 15px;
 }
 
+.img-test{
+	position: relative;
+	width: 300px;
+    height: 284px;
+	margin-left: -50px;
+	margin-top: -40px;
+}
+
+
+.card-img {
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+  }
+  
+  .card-body {
+	padding: 1rem;
+  }
+  
+  .card-title {
+	margin-top: 0;
+  }
+  
+  .card-subtitle {
+	font-size: 0.9rem;
+  }
+  
+  .card-text {
+	margin-bottom: 0;
+  }
+  
 
 
 .testemunho{
