--- a/css/style1.css
+++ b/css/style1.css
@@ -19,6 +19,33 @@
 	letter-spacing: 1.1px;
 }
 
+.info{
+	font-family: 'Sansation';
+	font-style: normal;
+	margin-left: 115px;
+	margin-top: -1.7%;
+}
+
+.tel1{
+	font-family: 'Sansation';
+	font-style: normal;
+	margin-left: 115px;
+	margin-top: -1.1%;
+}
+
+.tel2{
+	font-family: 'Sansation';
+	font-style: normal;
+	margin-left: 115px;
+	margin-top: -1%;
+}
+
+.icones{
+	margin-top: -5.9%;
+	margin-left: 85px;
+	width: -5px;
+}
+
 .nome {
 	margin-left: 55%;
 	margin-top: -31%;
