--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,14 @@ a:hover{
 	background-color: rgb(37, 37, 37, 0.8);
 }
 
+.nav-drop{
+	background-color: rgb(37, 37, 37, 0.8);
+	color: #fff;
+}
+.nav-drop .drop-item, .drop-item:hover{
+	background: none;
+	color: #fff;
+}
 .feature-block {
 	background: rgb(37, 37, 37, 0.8);
 	text-transform: uppercase;
@@ -372,6 +380,8 @@ a.thumbnail img {
 }
 
 .testemunho {
+	padding-left: 20px;
+	padding-right: 20px;
 	width: 80%;
 	margin-top: 15px;
 	font-family: 'Barlow';
@@ -380,11 +390,20 @@ a.thumbnail img {
 	font-size: 14px;
 	line-height: 23px;
 	color: #464255;
+	text-align: left;
 }
 
-.img-test {
+#img-test1 {
 	position: absolute;
 	top: -40px;
+	left: 245px;
+	width: 250px;
+	height: auto;
+}
+
+#img-test2 {
+	position: absolute;
+	top: -53px;
 	left: 245px;
 	width: 250px;
 	height: auto;
@@ -609,6 +628,10 @@ a.thumbnail img {
 	color: #FFFFFF;
 }
 
+.entrar:hover{
+	color: #FFFFFF;
+}
+
 .criar {
 	margin-top: 10px;
 	padding: 10px 30px 10px 30px;
@@ -621,6 +644,10 @@ a.thumbnail img {
 	line-height: 13px;
 	text-align: center;
 	text-transform: uppercase;
+	color: #FFFFFF;
+}
+
+.criar:hover{
 	color: #FFFFFF;
 }
 
