--- a/css/style.css
+++ b/css/style.css
@@ -585,7 +585,7 @@ a.thumbnail img {
 
 /* Página de atividades */
 
-.fotoinicial {
+#fotoinicial {
 	height: 75vh;
 	background-image: url(../imgs/canoying.jpg);
 	background-size: cover;
@@ -753,7 +753,7 @@ a.thumbnail img {
 	font-family: 'Sansation';
 	color: #3C4A5B;
 	padding-bottom: 30px;
-	padding-top: 30px;
+	padding-top: 10px;
   }
 
   .reservas span {
